--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Shopping mall demo server with Node.js, Express, and MongoDB",
   "main": "index.js",
+  "engines": { "node": "18.x" },
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js","kill5000":"node scripts/kill-port-5000.js"
@@ -21,7 +22,7 @@
     "express": "^4.22.1",
     "jsonwebtoken": "^9.0.3",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.21.1"
+    "mongoose": "^5.13.22"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
